[gd_scene load_steps=7 format=3 uid="uid://kdrbwj02fqyp"]

[ext_resource type="Script" path="res://Scripts/fragment_south.gd" id="1_50jiv"]
[ext_resource type="Texture2D" uid="uid://cwfxwmr1yw5y8" path="res://Art/Environment/Town/Statue/Statue Fragment BL.png" id="2_4mbyp"]
[ext_resource type="Resource" uid="uid://bwemjskrlhosx" path="res://inventory/items/fragment_south.tres" id="2_scfsh"]
[ext_resource type="Texture2D" uid="uid://jvout8ce3cc6" path="res://Art/Environment/Town/Statue/Statue Fragment BL Glow.png" id="3_orh6d"]
[ext_resource type="AudioStream" uid="uid://fchyyxjqruwu" path="res://Sounds/Effects/ExPickupSound.mp3" id="4_r4sli"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bma85"]
radius = 23.0868

[node name="FragmentSouth" type="Area2D"]
script = ExtResource("1_50jiv")
item = ExtResource("2_scfsh")

[node name="BaseSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_4mbyp")

[node name="GlowSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_orh6d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bma85")
disabled = true

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_r4sli")
pitch_scale = 3.0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_iiiinteractable_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
